--- a/small_n_stats_WPF/small_n_stats_WPF/Views/IntroWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/IntroWindow.xaml
@@ -1,19 +1,19 @@
 ﻿<!--
     Copyright 2016 Shawn Gilroy
 
-    This file is part of Small N Stats.
+    This file is part of Demand Analysis.
 
-    Small N Stats is free software: you can redistribute it and/or modify
+    Demand Analysis is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, version 2.
 
-    Small N Stats is distributed in the hope that it will be useful,
+    Demand Analysis is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with Small N Stats.  If not, see <http://www.gnu.org/licenses/gpl-2.0.html>.
+    along with Demand Analysis.  If not, see <http://www.gnu.org/licenses/gpl-2.0.html>.
 -->
     
 <Window x:Class="small_n_stats_WPF.Views.IntroWindow"
@@ -41,11 +41,11 @@
                 </Paragraph>
                 <Paragraph>
                     The
-                    <Bold>Small N Stats Demand Calculator</Bold>
+                    <Bold>Demand Analysis Demand Calculator</Bold>
                     is a tool designed to aid in the calculation and quantification
-                    of demand contexts.  Many components of Small N Stats 
+                    of demand contexts.  Many components of Demand Analysis 
                     are themselves available as individual scripts runnable in R alone 
-                    and the <Bold>Small N Stats Demand Calculator</Bold> serves as an easy 
+                    and the <Bold>Demand Analysis Demand Calculator</Bold> serves as an easy 
                     bridge for accessing these select methods in a familiar, 
                     spreadsheet-based interface.
                 </Paragraph>
