--- a/small_n_stats_WPF/small_n_stats_WPF/Views/BatchDemandCurveWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/BatchDemandCurveWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:settings="clr-namespace:small_n_stats_WPF.Properties"
         mc:Ignorable="d"
         Title="Batch Demand Curve Fitting" 
-        Height="500"
+        Height="525"
         Top="{Binding Source={x:Static settings:Settings.Default}, 
                 Path=DemandTop, 
                 Mode=TwoWay}" 
@@ -62,11 +62,10 @@
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="40"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="75"></RowDefinition>
+                <RowDefinition Height="75"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
 
@@ -108,6 +107,11 @@
                 VerticalContentAlignment="Center"
                 Text="{Binding XRangeValues}"
                 Background="{Binding Path=XBrush}">
+                <TextBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Manually Type Range" Command="{Binding PricingRangeCommand}" />
+                    </ContextMenu>
+                </TextBox.ContextMenu>
             </TextBox>
 
             <Button Name="valueButton" 
@@ -128,30 +132,18 @@
                 VerticalContentAlignment="Center"
                 Text="{Binding YRangeValues}"
                 Background="{Binding Path=YBrush}">
+                <TextBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Manually Type Range" Command="{Binding ConsumptionRangeCommand}" />
+                    </ContextMenu>
+                </TextBox.ContextMenu>
             </TextBox>
-
-            <Label Grid.Row="3" 
-                   Grid.Column="0"
-                   Margin="10"
-                   HorizontalAlignment="Center"
-                   Content="K Scaling">
-            </Label>
-
-            <TextBox
-                Name="kValue"
-                Grid.Row="3" 
-                Grid.Column="1"
-                Grid.ColumnSpan="3"
-                Margin="10"
-                VerticalContentAlignment="Center"
-                Text="{Binding KValue}">
-            </TextBox>
-
+          
             <!-- Check Box Controls Left -->
 
             <StackPanel
             Orientation="Horizontal"
-            Grid.Row="4"
+            Grid.Row="3"
             Grid.Column="2"
             Grid.ColumnSpan="2"
             VerticalAlignment="Center"
@@ -185,7 +177,7 @@
             <FlowDocumentScrollViewer
                 Grid.Column="0"
                 Grid.ColumnSpan="4"
-                Grid.Row="5"
+                Grid.Row="4"
                 Grid.RowSpan="3"
                 IsSelectionEnabled="False"
                 VerticalScrollBarVisibility="Hidden">
@@ -201,17 +193,23 @@
                     </Paragraph>
                     <Paragraph FontSize="12" FontFamily="Segoe UI" Padding="0,5,0,0">
                         The fitting of demand curves requires that users select a range of 
-                        Pricing Values (Vertical columns) that correspond with a range of 
-                        Consumption Values (Vertical columns).  Small n Stats can calculate
+                        Pricing Values (one row) that correspond with a range of 
+                        Consumption Values (many rows).  Small n Stats can calculate
                         both the Exponential Demand Function (Hursh &amp; Silverburg, 2008) 
                         as well as the Exponentiated Demand Function (Koffarnus, Franck, Stein
                         &amp; Bickel, 2015).
+                    </Paragraph>
+                    <Paragraph FontSize="12" FontFamily="Segoe UI" Padding="0,5,0,0">
+                        By default, k values are derived from each prior to each analysis unless
+                        otherwise specified. For exponential modeling, zero pricing points are 
+                        adjusted from 0.0 to 0.01 by default and zero consumption values are 
+                        dropped entirely.
                     </Paragraph>
                 </FlowDocument>
             </FlowDocumentScrollViewer>
 
             <Button Name="calculateButton" 
-                    Grid.Row="8" 
+                    Grid.Row="7" 
                     Grid.Column="0"
                     Grid.ColumnSpan="4"
                     Margin="10"
@@ -287,6 +285,11 @@
                 VerticalContentAlignment="Center"
                 Text="{Binding KRangeValues}"
                 Background="{Binding Path=KBrush}">
+                <TextBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Manually Type Range" Command="{Binding ConstantRangeCommand}" />
+                    </ContextMenu>
+                </TextBox.ContextMenu>
             </TextBox>
 
             <FlowDocumentScrollViewer
