--- a/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveWindow.xaml
@@ -106,6 +106,11 @@
             Margin="10"
             Text="{Binding XRangeValues}"
             Background="{Binding Path=XBrush}">
+                <TextBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Manually Type Range" Command="{Binding PricingRangeCommand}" />
+                    </ContextMenu>
+                </TextBox.ContextMenu>
             </TextBox>
 
             <Button Name="valueButton" 
@@ -125,6 +130,11 @@
             Margin="10"
             Text="{Binding YRangeValues}"
             Background="{Binding Path=YBrush}">
+                <TextBox.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Manually Type Range" Command="{Binding ConsumptionRangeCommand}" />
+                    </ContextMenu>
+                </TextBox.ContextMenu>
             </TextBox>
 
             <Label Grid.Row="3" 
