--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -203,12 +203,13 @@
                                     CanUserReorderColumns="False"
                                     CanUserSortColumns="False"
                                     CanUserAddRows="True"
-                                    EnableRowVirtualization="False"
+                                    EnableRowVirtualization="True"
                                     RowDetailsVisibilityMode="Visible"
                                     ClipboardCopyMode="ExcludeHeader"
                                     ItemsSource="{Binding RowViewModels}"
                                     DisplayRowNumbers="True"
                                     BorderThickness="0"
+                                    EnableColumnVirtualization="True"
                                     VerticalAlignment="Stretch">
                 <DataGrid.InputBindings>
                     <KeyBinding Key="Delete" Command="{Binding DeleteSelectedCommand}" />
@@ -231,8 +232,11 @@
                         <Setter Property="VerticalAlignment" Value="Stretch" />
                         <Setter Property="VerticalContentAlignment" Value="Center" />
                         <Setter Property="MinWidth" Value="25" />
+                        <Setter Property="Height" Value="25" />
                     </Style>
                 </DataGrid.RowHeaderStyle>                
+                
+                <!--
                 
                 <DataGrid.CellStyle>
                     <Style TargetType="{x:Type DataGridCell}">
@@ -240,9 +244,14 @@
                     </Style>
                 </DataGrid.CellStyle>
 
+                
+                
                 <DataGrid.Resources>
                     <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
                 </DataGrid.Resources>
+                
+                -->
+                
             </custom:CustomDataGrid>
         </DockPanel>
 
