--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -207,6 +207,15 @@
                 </MenuItem>
             </Menu>
 
+	    <!-- 
+	    	TODO
+	    	test out property changed handler?
+	    	... Mode=TwoWay, UpdateSourceTrigger=PropertyChanged for itemsource?
+
+	    	bind on focus change?
+	    	... UpdateSourceTrigger=LostFocus ?
+	    -->
+
             <custom:CustomDataGrid x:Name="dataGrid" 
                                     HorizontalAlignment="Stretch" 
                                     VerticalContentAlignment="Stretch"
