--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -108,7 +108,7 @@
                         </MenuItem>
                     </MenuItem>
                 </MenuItem>
-                
+
                 <MenuItem Header="_Logs">
                     <MenuItem Header="_Save Log Output" 
                               Command="{Binding SaveLogsWindowCommand}">
@@ -129,7 +129,7 @@
                         <MenuItem.Icon>
                             <Image Source="/Images/text-x-preview.png" />
                         </MenuItem.Icon>
-                        
+
                         <MenuItem Header="ggplot2 (GPL >= 2)"
                                   Command="{Binding Ggplot2LicenseWindowCommand}">
                             <MenuItem.Icon>
@@ -180,7 +180,7 @@
                         </MenuItem>
 
                     </MenuItem>
-                    
+
                     <MenuItem Header="_Credits" 
                               x:Name="credits" 
                               Command="{Binding InformationWindowCommand}">
@@ -206,7 +206,7 @@
                                     EnableRowVirtualization="True"
                                     RowDetailsVisibilityMode="Visible"
                                     ClipboardCopyMode="ExcludeHeader"
-                                    ItemsSource="{Binding RowViewModels}"
+                                    ItemsSource="{Binding RowViewModels, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                     DisplayRowNumbers="True"
                                     BorderThickness="0"
                                     EnableColumnVirtualization="True"
@@ -234,24 +234,8 @@
                         <Setter Property="MinWidth" Value="25" />
                         <Setter Property="Height" Value="25" />
                     </Style>
-                </DataGrid.RowHeaderStyle>                
-                
-                <!--
-                
-                <DataGrid.CellStyle>
-                    <Style TargetType="{x:Type DataGridCell}">
-                        <Setter Property="Background" Value="White"></Setter>
-                    </Style>
-                </DataGrid.CellStyle>
+                </DataGrid.RowHeaderStyle>
 
-                
-                
-                <DataGrid.Resources>
-                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
-                </DataGrid.Resources>
-                
-                -->
-                
             </custom:CustomDataGrid>
         </DockPanel>
 
