Custom k range finished (with DM), asserts/null checks

--- a/small_n_stats_WPF/small_n_stats_WPF/Views/BatchDemandCurveWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/BatchDemandCurveWindow.xaml
@@ -313,6 +313,7 @@
                 <TextBox.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Manually Type Range" Command="{Binding ConstantRangeCommand}" />
+                        <MenuItem Header="Reset Range" Command="{Binding ResetConstantRangeCommand}" />
                     </ContextMenu>
                 </TextBox.ContextMenu>
             </TextBox>
