Added recent files for menu

--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -82,6 +82,14 @@
                         </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
+                    <MenuItem Header="_Recent" 
+						x:Name="recentMenuItem"
+                        ItemsSource="{Binding RecentStuff}">
+                        <MenuItem.Icon>
+                            <Image Source="/Images/document-open.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <Separator />
                     <MenuItem Header="_Save" 
 						x:Name="saveMenuItem" 
 						Command="{Binding FileSaveCommand}">
