--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -246,6 +246,7 @@
                                     VerticalAlignment="Stretch">
                 <DataGrid.InputBindings>
                     <KeyBinding Key="Delete" Command="{Binding DeleteSelectedCommand}" />
+                    <KeyBinding Gesture="Ctrl+X" Command="{Binding CutSelectedCommand}"/>
                 </DataGrid.InputBindings>
 
                 <DataGrid.ColumnHeaderStyle>
