from upstream, remove remember location

--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -28,9 +28,7 @@
         mc:Ignorable="d"
         Title="{Binding Title}" 
         Height="{Binding Source={x:Static settings:Settings.Default}, Path=MainHeight, Mode=TwoWay}"
-        Width="{Binding Source={x:Static settings:Settings.Default}, Path=MainWidth, Mode=TwoWay}"
-        Top="{Binding Source={x:Static settings:Settings.Default}, Path=MainTop, Mode=TwoWay}" 
-        Left="{Binding Source={x:Static settings:Settings.Default}, Path=MainLeft, Mode=TwoWay}">
+        Width="{Binding Source={x:Static settings:Settings.Default}, Path=MainWidth, Mode=TwoWay}">
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
