--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -24,20 +24,12 @@
         xmlns:local="clr-namespace:small_n_stats_WPF"
         xmlns:settings="clr-namespace:small_n_stats_WPF.Properties"
         xmlns:custom="clr-namespace:small_n_stats_WPF.Utilities"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         mc:Ignorable="d"
+        Loaded="Window_Loaded"
+        Closing="Window_Closing"
         Title="{Binding Title}" 
         Height="{Binding Source={x:Static settings:Settings.Default}, Path=MainHeight, Mode=TwoWay}"
         Width="{Binding Source={x:Static settings:Settings.Default}, Path=MainWidth, Mode=TwoWay}">
-
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction Command="{Binding ViewLoadedCommand}"/>
-        </i:EventTrigger>
-        <i:EventTrigger EventName="Closing">
-            <i:InvokeCommandAction Command="{Binding ViewClosingCommand}"/>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
 
     <Window.InputBindings>
         <KeyBinding Gesture="Ctrl+S" Command="{Binding FileSaveCommand}" />
@@ -62,68 +54,41 @@
                     <MenuItem Header="_New" 
 						x:Name="newMenuItem" 
 						Command="{Binding FileNewCommand}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/document-new.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
                     <MenuItem Header="_Open" 
 						x:Name="openMenuItem" 
 						Command="{Binding FileOpenCommand}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/document-open.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="_Recent" 
 						x:Name="recentMenuItem"
                         ItemsSource="{Binding RecentStuff}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/document-open.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
                     <MenuItem Header="_Save" 
 						x:Name="saveMenuItem" 
 						Command="{Binding FileSaveCommand}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/document-save.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="_Save As" 
 						x:Name="saveAsMenuItem" 
 						Command="{Binding FileSaveAsCommand}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/document-save-as.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                     <Separator />
                     <MenuItem Header="_Close" 
                               x:Name="closeMenuItem" 
                               Command="{Binding FileCloseCommand}"
                               CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/application-exit.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                 </MenuItem>
 
                 <MenuItem Header="_Modeling">
 
                     <MenuItem Header="Demand Analysis">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/applications-other.png" />
-                        </MenuItem.Icon>
                         <MenuItem Header="_Demand Curve Fitting" 
                               Command="{Binding DemandCurveWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/applications-science.png" />
-                            </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="_Batch Demand Curve Fitting" 
                               Command="{Binding BatchDemandCurveWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/applications-science.png" />
-                            </MenuItem.Icon>
                         </MenuItem>
                     </MenuItem>
                 </MenuItem>
@@ -131,88 +96,55 @@
                 <MenuItem Header="_Logs">
                     <MenuItem Header="_Save Log Output" 
                               Command="{Binding SaveLogsWindowCommand}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/edit-copy.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="_Clear Logs" 
                               Command="{Binding ClearLogsWindowCommand}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/edit-clear.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                 </MenuItem>
 
                 <MenuItem Header="_Information">
                     <MenuItem Header="_Licenses">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/text-x-preview.png" />
-                        </MenuItem.Icon>
 
                         <MenuItem Header="R Statistical Package (GPL 2)"
                                   Command="{Binding RLicenseWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/text-x-preview.png" />
-                            </MenuItem.Icon>
                         </MenuItem>
 
-                        <MenuItem Header="nlmrt R Package (GPL >= 2)"
-                                  Command="{Binding NlmrtLicenseWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/text-x-preview.png" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-
-                        <MenuItem Header="nlstools R Package (GPL >= 2)"
-                                  Command="{Binding NlstoolsLicenseWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/text-x-preview.png" />
-                            </MenuItem.Icon>
+                        <MenuItem Header="EPPlus (GPLv2)"
+                                  Command="{Binding EPPLicenseWindowCommand}">
                         </MenuItem>
 
                         <MenuItem Header="R.NET Community (BSD 2-Clause)"
                                   Command="{Binding RDotNetLicenseWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/text-x-preview.png" />
-                            </MenuItem.Icon>
+                        </MenuItem>
+
+                        <MenuItem Header="nlmrt R Package (GPL >= 2)"
+                                  Command="{Binding NlmrtLicenseWindowCommand}">
+                        </MenuItem>
+
+                        <MenuItem Header="nlstools R Package (GPL >= 2)"
+                                  Command="{Binding NlstoolsLicenseWindowCommand}">
+                        </MenuItem>
+
+                        <MenuItem Header="base64enc R Package (GPL >= 2)"
+                                  Command="{Binding BaseEncodeLicenseWindowCommand}">
                         </MenuItem>
 
                         <MenuItem Header="ggplot2 R Package (GPL >= 2)"
                                   Command="{Binding Ggplot2LicenseWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/text-x-preview.png" />
-                            </MenuItem.Icon>
                         </MenuItem>
 
                         <MenuItem Header="Beezdemand R Package (GPL 2)"
                                   Command="{Binding BeezdemandLicenseWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/text-x-preview.png" />
-                            </MenuItem.Icon>
-                        </MenuItem>
-
-                        <MenuItem Header="GNOME Icon Theme (GPL >= 2)"
-                                  Command="{Binding GnomeIconLicenseWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/text-x-preview.png" />
-                            </MenuItem.Icon>
                         </MenuItem>
 
                         <MenuItem Header="Small n Stats (GPL 2)"
                                   Command="{Binding LicenseWindowCommand}">
-                            <MenuItem.Icon>
-                                <Image Source="/Images/text-x-preview.png" />
-                            </MenuItem.Icon>
                         </MenuItem>
-
                     </MenuItem>
 
                     <MenuItem Header="_Credits" 
                               x:Name="credits" 
                               Command="{Binding InformationWindowCommand}">
-                        <MenuItem.Icon>
-                            <Image Source="/Images/x-office-address-book.png" />
-                        </MenuItem.Icon>
                     </MenuItem>
                 </MenuItem>
             </Menu>
