--- a/small_n_stats_WPF/small_n_stats_WPF/Views/BatchDemandCurveWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/BatchDemandCurveWindow.xaml
@@ -10,6 +10,7 @@
         Closing="Window_Closing"
         WindowStartupLocation="CenterOwner"
         Title="Batch Demand Curve Fitting" 
+        ResizeMode="NoResize"
         Height="525"
         Width="425">
 
