--- a/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveWindow.xaml
@@ -26,6 +26,7 @@
          mc:Ignorable="d"
          Height="450" 
          Width="425"
+         ResizeMode="NoResize"
          Loaded="Window_Loaded"
          Closing="Window_Closing"
          WindowStartupLocation="CenterOwner"
