--- a/small_n_stats_WPF/small_n_stats_WPF/Views/CheckWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/CheckWindow.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="80"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <ScrollViewer HorizontalScrollBarVisibility="Visible" 
+        <ScrollViewer HorizontalScrollBarVisibility="Disabled" 
                       VerticalScrollBarVisibility="Visible" 
                       Grid.Row="0"
                       Grid.RowSpan="3"
