--- a/small_n_stats_WPF/small_n_stats_WPF/Views/RangePrompt.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/RangePrompt.xaml
@@ -31,10 +31,11 @@
                     Margin="5"
                     FocusManager.FocusedElement="{Binding ElementName=RangeText}">
         <TextBlock Text="Enter the custom Range (e.g., B1:B10)"
-                       Margin="5"/>
+                   ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                   Margin="5"/>
         <TextBox x:Name="RangeText"
                      Margin="5" />
-        <Button Content="Save"
+        <Button Content="Select"
                     Margin="5" 
                     Click="Button_Click" />
     </StackPanel>
