full vector graphics

--- a/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/MainWindow.xaml
@@ -117,6 +117,10 @@
                                   Command="{Binding RDotNetLicenseWindowCommand}">
                         </MenuItem>
 
+                        <MenuItem Header="SharpVectors License (BSD 3-Clause)" 
+                                  Command="{Binding SharpVectorGraphicsLicenseWindowCommand}">
+                        </MenuItem>
+
                         <MenuItem Header="nlmrt R Package (GPL >= 2)"
                                   Command="{Binding NlmrtLicenseWindowCommand}">
                         </MenuItem>
