--- a/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveWindow.xaml
+++ b/small_n_stats_WPF/small_n_stats_WPF/Views/DemandCurveWindow.xaml
@@ -111,6 +111,7 @@
                      IsReadOnly="True"
                      Margin="10"
                      Text="{Binding XRangeValues}"
+                     VerticalContentAlignment="Center"
                      Background="{Binding Path=XBrush}">
                          <TextBox.ContextMenu>
                              <ContextMenu>
@@ -134,6 +135,7 @@
                      IsReadOnly="True"
                      Margin="10"
                      Text="{Binding YRangeValues}"
+                     VerticalContentAlignment="Center"
                      Background="{Binding Path=YBrush}">
                          <TextBox.ContextMenu>
                              <ContextMenu>
